--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "gamerickmorty",
+  "name": "cvrickmorty",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "babelTranspile" : "npx babel js --out-file scriptTest.js",
-    "babelie" : "npx babel test.js --out-file scriptT.js",
-    "babelall" : "npx babel all.js --out-file allT.js"
+    "start": "webpack --config webpack.config.js"
   },
-  "author": "",
+  "author": "Rouzaud Pierre",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -17,9 +14,14 @@
     "babel-plugin-transform-es2015-object-super": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015-ie": "^6.7.0"
+    "babel-preset-es2015-ie": "^6.7.0",
+    "webpack": "^4.10.2",
+    "webpack-cli": "^3.0.0"
   },
   "dependencies": {
-    "babel-preset-es2015": "^6.24.1"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.24.1",
+    "path": "^0.12.7"
   }
 }
